--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,6 @@ img{
   margin: 20px 0px 20px 0px;
 }
 .lifeText {
-  margin-top: 40px;
-  margin-bottom: 50px; 
+  text-indent: 40px;
+  margin: 40px 30px 50px 30px;
 }
