--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,6 @@ img{
 }
 .lifeText {
 /*   display: block; */
-  text-indent: 30px;
-  margin: 40px;
+  text-indent: 40px;
+  margin: 60px 0px 40px 0px;
 }
