--- a/styles.css
+++ b/styles.css
@@ -38,39 +38,23 @@ a {
 }
 .mainTitle{
   padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   margin-top: 140px;
 /*   padding: 10px 10px 10px 10px; */
 /*   border: 2px solid blue; */
   font-size: 42px;
 }
 .subtitle{
-  margin-top: 0px;
+  margin-top: 5px;
 /*   border: 3px solid red; */
-  padding: 5px 10px 70px 10px;
+  padding: 5px 10px 5px 10px;
   font-size: 24px;
   font-weight: 100;
 }
-img{
-  max-width: 100%;
-}
-.skillsGrid {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-.skillsGrid i {
-  font-size: 50px;
-  margin: 10px;
-}
-.vscode {
-  width: 40px;
-  height: 40px;
-  padding: 0px 10px 0px 10px;
-}
-.vim {
-  width: 40px;
-  height: 40px;
-  padding: 0px 10px 0px 10px;
+.mainTextHeader {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 50px;
 }
 .mainText{
   text-align: left;
@@ -84,5 +68,8 @@ img{
 .lifeText {
 /*   display: block; */
   text-indent: 40px;
-  margin: 60px 0px 40px 0px;
+  margin: 60px 0px 100px 0px;
+}
+main{
+  margin-bottom: 100px;
 }
