--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ nav li {
   padding: 5px 5px 5px 5px;
 /*   border: 3px solid blue; */
   font-weight: 600;
+  padding: 5px;
 }
 nav a {
   text-decoration: none;
