--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ ul.no-bullets {
   top: 0px;
   left: 0px;
   width: 100%;
-  background-color: antiquewhite;
+  background-color: #fff;
   color:white;
   font-size: 30px;
   padding: 5px;
