--- a/styles.css
+++ b/styles.css
@@ -1,121 +1,28 @@
-body{
-  min-width: 300px;
-  max-width: 600px;
-  margin: auto;
-  background-color: white;
-  font-family: Arial, Helvetica, sans-serif;
+body {
+    font-size: 20px;
+    line-height: 1.3;
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 800px;
+    margin: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 a {
-  background-color: powderblue;
-  transition: background-color .5s;
+    background-color: powderblue;
+    transition: background-color .5s;
 }
 
 a:hover {
-  background-color: gold;
+    background-color: gold;
 }
 
 ul.no-bullets {
-  list-style-type: none; /* Remove bullets */
-  padding: 0; /* Remove padding */
-  margin: 0; /* Remove margins */
+    list-style-type: none; /* Remove bullets */
+    padding: 0; /* Remove padding */
+    margin: 0; /* Remove margins */
 }
 
-.navbar {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  background-color: #fff;
-  color:white;
-  font-size: 30px;
-  padding: 5px;
-  text-align: center;
-  border-bottom: 2px solid #777;
-  margin-top: 10px;
+li {
+    margin: 10px;
 }
-nav li {
-  display: inline;
-  margin: 5px 10px 5px 10px;
-  padding: 5px 5px 5px 5px;
-/*   border: 3px solid blue; */
-  font-weight: 600;
-  padding-bottom: 5px;
-}
-nav a {
-  text-decoration: none;
-  color:midnightblue;
-  background-color: #fff;
-}
-
-nav a:hover {
-  text-decoration: none;
-  color:midnightblue;
-  background-color: #fff;
-}
-
-a {
-  text-decoration: none;
-  color: blue;
-}
-.mainTitle{
-  padding: 10px;
-  margin-bottom: 5px;
-  margin-top: 140px;
-/*   padding: 10px 10px 10px 10px; */
-/*   border: 2px solid blue; */
-  font-size: 42px;
-  text-align: center;
-}
-.subtitle{
-  margin-top: 5px;
-/*   border: 3px solid red; */
-  padding: 5px 10px 5px 10px;
-  font-size: 24px;
-  font-weight: 100;
-}
-.mainTextHeader {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-top: 50px;
-  text-align: center;
-}
-.mainText{
-  text-align: left;
-  padding: 20px;
-  font-size: 20px;
-  line-height: 1.3;
-}
-.mainText li {
-  margin: 20px 0px 20px 0px;
-}
-.lifeText {
-/*   display: block; */
-  text-align: left;
-  font-size: 24px;
-  text-indent: 40px;
-  margin: 60px 0px 100px 0px;
-}
-main{
-  margin-bottom: 100px;
-}
-footer {
-  padding: 5px;
-  margin: 5px;
-}
-
-.blog-pages {
-  text-align: left;
-}
-
-.blog-pages p {
-  font-size: 20px;
-}
-
-.blog-pages ul {
-  font-size: 20px;
-  line-height: 1.6;
-}
-
-
-/* mit lehet elvenni belole? taoldal */
